# nrf52-fw-demo

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
base/: Cargo.toml
base/src/: lib.rs  watchdog.rs
demo/: Cargo.toml  memory.x
demo/src/: consts.rs  main.rs
